--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -416,9 +416,71 @@
                     <!-- class="fa fa-reorder"--><i></i>{{_('Labels')}}
             </div>
           </div>
-          <div class="portlet-body">
+                    <div class="portlet-body">
+          <div class="row">
+            <ul class="list-group tags-list relatedTags" id="slimList">
+              <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  ng-drag="dragTag(tag_item)" >
+                <div class="row">
+                <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;" id="tag_<%=$index%>">
+                <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" id="closy_<%=$index%>"></a> 
+                  <span  editable-text="tag_item.name" draggable  ng-click="editTag(tag_item,<%=$index%>)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" 
+                    ng-model='tag_item.name'   onhide="hideEditable(<%=$index%>,<%=tag_item%>)" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;">
+                      <%= tag_item.name %>
+                  </span>
+                  </div>
+            <!--     <input type="checkbox" ng-show="(tag_item!=edited_tag)&&(!manage_tags)" ng-click="selectTag(tag_item,$index,$event)" style="margin-right: 10px;" class="pull-right customCheck" ng-checked="isSelected()"> -->
+
+             <div class="customCheckbox CustomSmallCheck pull-right" id="checky_<%=$index%>" style="margin-right:8px">  
+              <input  title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected()"  class="checkbox" id="opportunityTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
+              <label for="opportunityTag_<%=$index%>" class="labelElement">
+                <span class="check"></span>
+                <span class="box"></span>
+              </label>  
+          </div>
+
+                  <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
+                    <input ng-blur="doneEditTag(tag_item)" type="text" class="col-md-offset-1 col-md-7 form-control inlineEditTag " ng-model="tag_item.name">
+                  </form>
+                  <button ng-click="deleteTag(tag_item)" class="close_tag close pull-right" ng-show="manage_tags"></button>
+                </div>
+              </li>
+            </ul>
+            </div>
+   <!--          <li class="list-group-item tags-list-item" style="border:none;margin-bottom:5px;" ng-hide="showNewTag" ng-click="showNewTag=true">
+                <a ng-click="" class="btn-link addAnotherPhone">
+                  <i class="fa fa-tags"></i>  {{_('Add a new label')}}
+                </a>
+           </li> -->
+     <form class=" newTagForm" role="form" >
+       <!--    <button type="button" class="close"  aria-hidden="true" ng-click="showNewTag=false"></button> -->
+          <div class="row">
+            <div class="col-md-12 form-group">
+
+              <input type="text" ng-model="tag.name" class="form-control" id="tag_name" placeholder="{{ _('New Topic')}}">
+
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <ul class="color_pallet_menu">
+                <li ng-repeat="color in color_pallet" ng-click="checkColor(color)" class="color-<%=color.name%>" ng-class='{colorChecked: color.name==tag.color.name}' >
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <input type="submit"  ng-click="addNewtag(tag)" class="btn green pull-right" value="{{_('Add')}}">
+            </div>
+          </div>
+        </form>
+        <!--     <div class="form-group btn-manage-tags" ng-show="tags">
+              <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">
+              {{_('Manage Tags')}}
+              </button>
+        </div> -->
+      </div>
+<!--           <div class="portlet-body">
             <ul class="list-group tags-list" id="slimList">
-              <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item"  >
+              <li ng-repeat="tag_item in tags" class="list-group-item tags-list-item">
                 <div class="row">
                   <span editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)" class="with-color" ng-click="editTag(tag_item)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
                   ng-model='tag_item.name'  onhide="hideEditable()" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
@@ -467,7 +529,7 @@
               <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">{{_('Manage Tags')}}
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       </div>
