--- a/templates/base.html
+++ b/templates/base.html
@@ -527,12 +527,12 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 
 
 
-//var ROOT = '/_ah/api';
+var ROOT = '/_ah/api';
 
 
 
 
-var ROOT = 'https://preprod-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://preprod-iogrow.appspot.com/_ah/api';
 
 
 
