Delete tag is not working on Opportunity List ,fix #1603
Former-commit-id: a7cd43d6a88826807b147af4212630a1d12e9f3d [formerly 5de9e8cdfdcf9fb3835a0f46f2f79f7b3c4d9afd] [formerly 2cfc2fa2c2a5309d1d1dedf8f3ec94e01150fd4c [formerly f7f584d88d56153921473072de561fb96cab024f]]
Former-commit-id: 4ea3ec4482412ff54fb3d4f43e77b6669865c398 [formerly 5ab22c23410393fa06a3ec590eb17576b1297352]
Former-commit-id: f1a782158bdc43c99d6d3194bb7435e18c4c87c5

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -487,7 +487,7 @@
                 <div class="with-color" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;display: inline-block;float: left;" id="tag_<%=$index%>">
 
                   <a href="" ng-click="deleteTag(tag_item)" class="removeRelatedTag select2-search-choice-close" id="closy_<%=$index%>"></a> 
-                  <span  editable-text="tag_item.name"  ng-drag="dragTag(tag_item)"  ng-click="editTag(tag_item,<%=$index%>)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
+                  <span  editable-text="tag_item.name" draggable ng-drag="dragTag(tag_item)"  ng-click="editTag(tag_item,<%=$index%>)" ng-show="(tag_item!=edited_tag)||(!manage_tags)" style="background-color:<%=tag_item.color%>;color:<%=idealTextColor(tag_item.color)%>;"
                   ng-model='tag_item.name'  onhide="hideEditable(<%=$index%>,<%=tag_item%>)" onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                       <%= tag_item.name %>
                   </span>
