init intercom code setup
Former-commit-id: 12b03120e044316a063c25b0c746ae2aba9fcf1f [formerly ff13ef5a2f2043a37112bf95888f9e1dcaf60f55] [formerly 56f28b036c7e6ed41d2c56e21b4caab043d4c6ba [formerly 88cbab1eb829bbe626382a2163be438efa41335e]]
Former-commit-id: 342018347f6b5dd0386f1634ea3abf48ae2e6f56 [formerly d153d29478e1ece80858a4349d2d21f3c449f95f]
Former-commit-id: 8d7df7066c635bb7ca08d7d63770cccfd907bcb1

--- a/templates/base.html
+++ b/templates/base.html
@@ -636,14 +636,18 @@ function HideupdateLogo(){
     
          
 }
+var created_at = new Date("{{user.created_at}}");
+console.log('-----:)------');
+console.log('1234567890');
+console.log(created_at.getTime()/1000);
 window.Intercom('boot', {
   app_id: "s9iirr8w",
   // TODO: The current logged in user's full name
-  name: "John Doe",
+  name: "{{user.google_display_name}}",
   // TODO: The current logged in user's email address.
-  email: "john.doe@example.com",
+  email: "{{user.email}}",
   // TODO: The current logged in user's sign-up date as a Unix timestamp.
-  created_at: 1234567890
+  created_at: created_at.getTime()/1000
 });
  </script>
 
