tracking some discovery events on intercom
Former-commit-id: 421d120f48142fa78968ce8eaf903183684c1806 [formerly bee3152ea1c1520784a0bce574c6362b9ea0994f] [formerly 921b86fc1ee4a6367e76573e2e48967cb333ca57 [formerly 54cde271516f8ac7ccd4b3a3cc572e1644d0dfb8]]
Former-commit-id: fac060b72103b90a8070b031438d7c0d8e2fb916 [formerly a5fa037bca4ba0c8957b5575f31a78c152f4f36e]
Former-commit-id: c4d2e4d4128bbfc043ea0dbd971b231ff095b69c

--- a/templates/base.html
+++ b/templates/base.html
@@ -648,6 +648,7 @@ window.Intercom('boot', {
   name: "{{user.google_display_name}}",
   // TODO: The current logged in user's email address.
   email: "{{user.email}}",
+  topics: '{{topics}}',
   // TODO: The current logged in user's sign-up date as a Unix timestamp.
   created_at: created_at.getTime()/1000
 });
