correct nug filtering on discovery list
Former-commit-id: 0043b22717b3321107c3f593cb34640b29fc811b [formerly ca61de93a751e4609348f511bff078b2155266da] [formerly ca092dd8d2d4d3662137e603f6c24ae48bfadd93 [formerly 97796b8d93e61acf4eb690543019655cec7d78ad]]
Former-commit-id: b42dff8e5fd2d20b97d556c4501924429faa6af8 [formerly ae0ba841d4066c7e3faac86826659acb329b96bf]
Former-commit-id: 4959f77632160a161ac2378d0456e7e4c6f05ffc

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -369,7 +369,7 @@
               </span>
             </div>
             <div class="customCheckbox CustomSmallCheck pull-right" ng-hide="hideCheckBox">  
-              <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected()"  class="checkbox" id="discoveryTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
+              <input ng-show="accounts" title="Select Task" style=" padding-top: 4px; " type="checkbox" ng-checked="isSelected(tag_item)"  class="checkbox" id="discoveryTag_<%=$index%>"  ng-click="selectTag(tag_item,$index,$event)" >             
               <label for="discoveryTag_<%=$index%>" class="labelElement">
                 <span class="check"></span>
                 <span class="box"></span>
