add url on iogrow search result page
Former-commit-id: c7a4ae826f9b830459e38674968f0da1b1995256 [formerly ad24c07a13d654d8851748c6d6c9c620952591e7] [formerly a850abe86cc1c96626dcd1f712112b1fe8ff7370 [formerly 8a15875ba147822bcd1e3241288c84d5627452cb]]
Former-commit-id: 1dea4f325ed3dd4cbdc2b9adf3dd476a7679b824 [formerly 00db3ffef39160d83bce558825825dc770d3023e]
Former-commit-id: 1928dc6efebecc45ff0688dd229620103194dbb1

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -23,7 +23,7 @@
           <span role="button" class="filterItem" ng-click="back_to_tweets();selectedOption ='all'" ng-class="{activeFilter: selectedOption =='all'}">{{ _('Tweets')}} 
            </span>
           
-          <span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span>
+          <!--span role="button" class="filterItem"  ng-click="influencers_V2();selectedOption ='my'" ng-class="{activeFilter: selectedOption =='my'}" >{{ _('Influencers')}}</span-->
           
           <!-- <span role="button" class="filterItem" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'">{{ _('On')}}<span class="hidden-xs hiddenOnxs">{{ _('Maps')}}</span> </span -->
           
