hide psychometrics tab on discover show page
Former-commit-id: 0c716fcaa1e9e91fe501bfbb751d5a2142743cf4 [formerly a4b7cbbeb3e21ff91ed6c700fcd66018cc0eadeb] [formerly 630c50b85909c734e41651d15c6608c6920cea71 [formerly 423e348943f0f80b0fed33d5b584cd96df18c3e5]]
Former-commit-id: b90959154bab1f72bd95dcec0f43b5f56b4bb164 [formerly 31d36d0105a8760124dd4039828975fd0b0fac9e]
Former-commit-id: 9fadca49f10b618ad857df8f59c114dc20d2495a

--- a/templates/discovers/discover_show.html
+++ b/templates/discovers/discover_show.html
@@ -119,9 +119,9 @@
                   <li class="ng-tab" ng-class="{active: selectedTab == 1}">
                     <a ng-click="selectedTab = 1;">{{ _('About Author')}}</a>
                   </li>
-                  <li class="ng-tab" ng-class="{active: selectedTab == 3}">
+                  <!--li class="ng-tab" ng-class="{active: selectedTab == 3}">
                     <a  ng-click="selectedTab = 3;" onclick="iframeLoading()">{{_('Psychometrics')}}</a>
-                  </li>
+                  </li-->
                  
 
                   <li class="dropdown md-menu-inv">
