--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -243,9 +243,9 @@
              <div class="head">
              
               <div class="pic">
-                      <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   target="new" class="startup-link" title="account.name">
+                      <a href="/#/discovers/show/<%= tweet.idp %>*" ng-click="details_of_tweets(tweet.idp)"   class="startup-link" title="account.name">
                 
-                          <img href="/#/discovers/show/<%= tweet.idp %>*" ng-show="tweet._source.user.profile_image_url" ng-click="details_of_tweets(tweet.id)" target="new" class="img-responsive profile-photo" src="<%=tweet._source.user.profile_image_url %>">
+                          <img href="/#/discovers/show/<%= tweet.idp %>*" ng-show="tweet._source.user.profile_image_url" ng-click="details_of_tweets(tweet.id)"  class="img-responsive profile-photo" src="<%=tweet._source.user.profile_image_url %>">
                       </a>
               </div>
               <div class="text">
